# StickyNoteApp

./: .gitignore  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
Assets/qss/: cozy-parchment.qss  dark.qss  hogwarts.qss  neon.qss
desktop/: .eslintrc.cjs  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/src/: schema.ts  store.ts  types.ts
desktop/src-tauri/: tauri.conf.json
desktop/src/components/: FolderSidebar.tsx  RichEditor.tsx  Sticky.tsx  ThemeSwitcher.tsx
desktop/src/libs/: crypto.ts  db.ts  dbBridge.ts  debounce.ts  portal.ts  reminders.ts
desktop/src/main/: index.ts
desktop/src/renderer/: main.tsx  theme.css
desktop/test/: crypto.test.ts
src/aurora_notes/: __init__.py  __main__.py  main.py
src/aurora_notes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/aurora_notes/crypto/: encryption.py
src/aurora_notes/models/: base.py
src/aurora_notes/services/: folder_service.py  hotkey_service.py  note_service.py  reminder_service.py  theme_service.py
src/aurora_notes/ui/: desktop_sticky.py  dialogs.py  folder_dock.py  main_window.py  search_bar.py  sticky_widget.py  sticky_window.py
tests/unit/: test_encryption.py  test_note_service.py
