[project]
name = "aurora-notes"
version = "1.0.0"
description = "Secure sticky notes with themes and reminders"
authors = [{name = "Aurora Team", email = "aurora@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "sqlmodel>=0.0.14",
    "cryptography>=41.0.7",
    "keyring>=24.3.0",
    "rapidfuzz>=3.6.1",
    "apscheduler>=3.10.4",
    "dateparser>=1.2.0",
    "keyboard>=0.13.5",
    "pynput>=1.7.6",
    "aiofiles>=23.2.1",
    "watchdog>=3.0.0",
    "markdown>=3.5.1",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-qt>=4.3.1",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "black>=23.12.0",
    "mypy>=1.7.1",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true